[gd_scene load_steps=7 format=3 uid="uid://dm4if6i8tns4m"]

[ext_resource type="Theme" uid="uid://bwgtcoet55w6c" path="res://scenes/ui/ui_theme.tres" id="1_57map"]
[ext_resource type="Texture2D" uid="uid://dhdsse3kfqmvy" path="res://sprites/fish.png" id="2_niefe"]
[ext_resource type="Script" uid="uid://4t6xeqn4221t" path="res://scripts/ui/notification_new_fish_type.gd" id="2_rop7t"]
[ext_resource type="AudioStream" uid="uid://c6x0kgqa13u6x" path="res://audio/fx_fish_caught.wav" id="3_mt56a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_niefe"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_rop7t"]
atlas = ExtResource("2_niefe")
region = Rect2(16, 32, 16, 16)

[node name="NotificationNewFishType" type="MarginContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 69.0
offset_bottom = 61.0
grow_horizontal = 2
theme = ExtResource("1_57map")
script = ExtResource("2_rop7t")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mt56a")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_niefe")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New fish type caught!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = SubResource("AtlasTexture_rop7t")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<fish name>"

[node name="LabelRarity" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[color=RED]<fish rarity>"
fit_content = true
